--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ python:
   - "3.6"
 
 script:
-  - "python test_gpustat.py"
+  # pytest --verbose -s  (print stdouts, etc.)
+  - 'PYTEST_ADDOPTS="-s" python setup.py test'
