--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,12 @@ python:
   - "3.5"
   - "3.6"
 
+before_install:
+  - pip install flake8 && flake8 .
+
+install:
+  - pip install .
+
 script:
   # pytest --verbose -s  (print stdouts, etc.)
-  - 'PYTEST_ADDOPTS="-s" python setup.py test'
+  - PYTEST_ADDOPTS="-s" python setup.py test
