--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ matrix:
     - python: "3.7"
       dist: xenial
       sudo: required
+    - python: "3.8"
+      dist: xenial
+      sudo: required
 
 script:
   # pytest --verbose -s  (print stdouts, etc.)
