--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,19 @@ matrix:
       dist: xenial
       sudo: required
 
+    - os: windows
+      python: "3.7"
+      language: "shell"
+      before_install:
+        - choco install python --version 3.7.4
+        - python --version
+        - python -m pip install --upgrade pip
+        - pip3 install --upgrade pytest
+        - pip3 install codecov
+      env: PATH="/c/Python37:/c/Python37/Scripts:$PATH" PYTHONIOENCODING="UTF-8"
+
 script:
+  - pip install -r requirements.txt
   # pytest --verbose -s  (print stdouts, etc.)
   - PYTEST_ADDOPTS="-s" python setup.py test
   - pip install .
