Use setuptools_scm to auto-generate __version__ string.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -e ".[test]"
+          python -m gpustat --version
 
       - name: Run tests
         run: |
