--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,10 @@
 name: "Run Tests"
 on: [push, pull_request, workflow_dispatch]
 
+defaults:
+  run:
+    shell: bash
+
 jobs:
   unit-tests:
     name: "Unit Tests"
@@ -22,6 +26,9 @@ jobs:
             python-version: "3.10"
           - os: ubuntu-latest
             python-version: "3.11"
+          - os: ubuntu-latest
+            python-version: "3.11"
+            pynvml-version: 11.495.46
           - os: windows-latest
             python-version: "3.8"
           - os: windows-latest
@@ -46,6 +53,9 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -e ".[test]"
+          if [ -n "${{ matrix.pynvml-version }}" ]; then
+            pip install nvidia-ml-py==${{ matrix.pynvml-version }}
+          fi
           python -m gpustat --version
 
       - name: Run tests
